--- a/inst/doc/MulcomVignette.Rnw
+++ b/inst/doc/MulcomVignette.Rnw
@@ -5,6 +5,11 @@
 \documentclass[a4paper]{article}
 
 \usepackage{amsmath,amssymb,pstricks}
+% With MikTeX 2.9, using pstricks also requires using auto-pst-pdf or running
+% pdflatex will fail. Note that using auto-pst-pdf requires to set environment
+% variable MIKTEX_ENABLEWRITE18=t on Windows, and to set shell_escape = t in
+% texmf.cnf for Tex Live on Unix/Linux/Mac.
+\usepackage{auto-pst-pdf}
 \usepackage{graphicx}
 \usepackage{Sweave}
 %\setlength{\parindent}{0cm} \setlength{\parskip}{12pt}
