--- a/inst/doc/MulcomVignette.Rnw
+++ b/inst/doc/MulcomVignette.Rnw
@@ -265,7 +265,8 @@ affyMulcB4Probes <- mulDiff(Affy, permutation, b4Opt[2], b4Opt[1], 4)
 <<MulComGenes3>>=
 mulcomGeneList <- unique(c(affyMulc1Probes, affyMulc6Probes, affyMulcB4Probes))
 @
-The analysis yielded to 1555 significant genes; we performed the same analysis on Illumina dataset: with 763 significant genes 
+The analysis yielded to 1555 significant genes; we performed the same analysis on Illumina dataset: 
+with 763 significant genes, user can apply the function \emph{mulInt} to verify the overlap between differnt list of genes.
 <<permutation and optimization illumina, echo=F, results=hide>>=
 #permutationIlmn <- mulPerm(Ilmn, Ilmn$Groups, np = 100, seed = 7)
 #optimizationIlmn <- mulOpt(permutationIlmn, vm = seq(0.1,0.5, 0.1), vt = seq(1,3, 0.1))
