--- a/inst/doc/MulcomVignette.Rnw
+++ b/inst/doc/MulcomVignette.Rnw
@@ -266,6 +266,12 @@ affyMulcB4Probes <- mulDiff(Affy, permutation, b4Opt[2], b4Opt[1], 4)
 mulcomGeneList <- unique(c(affyMulc1Probes, affyMulc6Probes, affyMulcB4Probes))
 @
 The analysis yielded to 1555 significant genes; we performed the same analysis on Illumina dataset: with 763 significant genes 
+User can take advantage of the function mulInt to evalute the intersection of different lists of genes as it follows:
+<<mulInt>>=
+intersection <- mulInt(affyMulc1Probes,affyMulc6Probes)
+@
+
+
 <<permutation and optimization illumina, echo=F, results=hide>>=
 #permutationIlmn <- mulPerm(Ilmn, Ilmn$Groups, np = 100, seed = 7)
 #optimizationIlmn <- mulOpt(permutationIlmn, vm = seq(0.1,0.5, 0.1), vt = seq(1,3, 0.1))
