--- a/inst/doc/MulcomVignette.Rnw
+++ b/inst/doc/MulcomVignette.Rnw
@@ -5,11 +5,6 @@
 \documentclass[a4paper]{article}
 
 \usepackage{amsmath,amssymb,pstricks}
-% With MikTeX 2.9, using pstricks also requires using auto-pst-pdf or running
-% pdflatex will fail. Note that using auto-pst-pdf requires to set environment
-% variable MIKTEX_ENABLEWRITE18=t on Windows, and to set shell_escape = t in
-% texmf.cnf for Tex Live on Unix/Linux/Mac.
-\usepackage{auto-pst-pdf}
 \usepackage{graphicx}
 \usepackage{Sweave}
 %\setlength{\parindent}{0cm} \setlength{\parskip}{12pt}
@@ -156,7 +151,7 @@ data("benchVign")
 
 \subsection{\texttt{MulCom} Analysis}
 The \texttt{MulCom} implementation requires as starting imput files 
-an \texttt{ExpressionSet} and a class vector corresponding 
+an \texttt{ExpressionSet}, a matrix or a data.frame, and a class vector corresponding 
 to groups in the analysis. In this example the class vector is Affy\$Groups: 
 <<MulcomTest>>=
 Affy$Groups
@@ -179,7 +174,7 @@ sg
 \subsection{Montecarlo simulation for \texttt{MulCom} Test}
 To validate the performance of the test with the chosen parameters, the package implements the function
 \emph{mulPerm} to perform a Montecarlo analysis of the data, which reiterates \emph{mulScores} on permutated
-samples. The function requires the \texttt{ExpressionSet}, the number of permutations, 
+samples. The function requires the \texttt{ExpressionSet}, a matrix or a data.frame,  the number of permutations, 
 \emph{np}, and \emph{seed}, to generate reproducible permutation:
 
 <<MulcomPermutation>>=
@@ -215,7 +210,7 @@ The function \emph{mulParOpt} is designed to identify the optimal \emph{m} and
 \emph{t} values combination leading to the maximum number of differentially 
 regulated genes satisfying an user define FDR threshold. 
 
-The function  requires the \texttt{ExpressionSet}, the output of the \emph{mulOpt}, an
+The function  requires the \texttt{ExpressionSet}, a matrix or a dafata.frame, the output of the \emph{mulOpt}, an
 index, \emph{ind} defining the comparison to optimize and a threshold, \emph{ths}, 
 defining the  FDR required. In case of equal number of genes, the combination of \emph{m} and \emph{t} with 
 the lower FDR will be prioritized. In case of both identical number of genes and FDR, 
@@ -242,7 +237,7 @@ genes for a series of combinations of m and t. The grey area represents the comb
 
 In the example below we adopt the automated method to optimize \emph{m} and
 \emph{t} with \emph{mulParOpt} and the function \emph{mulDiff} to identify differentially regulated
-genes. \emph{mulDiff} requires the \texttt{ExpressionSet}, the permutation object and the \emph{m}
+genes. \emph{mulDiff} requires the \texttt{ExpressionSet}, a matrix or a data.frame, the permutation object and the \emph{m}
 and \emph{t} parameters:
 
 <<MulComGenes>>=
@@ -271,6 +266,12 @@ affyMulcB4Probes <- mulDiff(Affy, permutation, b4Opt[2], b4Opt[1], 4)
 mulcomGeneList <- unique(c(affyMulc1Probes, affyMulc6Probes, affyMulcB4Probes))
 @
 The analysis yielded to 1555 significant genes; we performed the same analysis on Illumina dataset: with 763 significant genes 
+User can take advantage of the function mulInt to evalute the intersection of different lists of genes as it follows:
+<<mulInt>>=
+intersection <- mulInt(affyMulc1Probes,affyMulc6Probes)
+@
+
+
 <<permutation and optimization illumina, echo=F, results=hide>>=
 #permutationIlmn <- mulPerm(Ilmn, Ilmn$Groups, np = 100, seed = 7)
 #optimizationIlmn <- mulOpt(permutationIlmn, vm = seq(0.1,0.5, 0.1), vt = seq(1,3, 0.1))
@@ -360,7 +361,7 @@ reproducibility: the signatures obtained by Mulcom in Illumina and Affymetrix hi
 in respect to \emph{t}-test, Limma or Sam \cite{Limma, Sam}.
 
 MulCom can also be applied to any -omics datasets such as mirnomic, proteomic
-and metabolomic studies, provided as an \texttt{ExpressionSet}.
+and metabolomic studies, provided as an \texttt{ExpressionSet}, or any matrix formats.
 
 
 \section{References}
