" update to same version "
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/Mulcom@58313 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/MulcomVignette.Rnw
+++ b/inst/doc/MulcomVignette.Rnw
@@ -4,7 +4,7 @@
 %\VignettePackage{Mulcom}
 \documentclass[a4paper]{article}
 
-\usepackage{amsmath,amssymb,pstricks}
+\usepackage{amsmath,amssymb}
 \usepackage{graphicx}
 \usepackage{Sweave}
 %\setlength{\parindent}{0cm} \setlength{\parskip}{12pt}
